modified:   index.adoc 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Martin Mascher, IPK Gatersleben, November 2023
+<p>Martin Mascher, IPK Gatersleben, November 2025
 <a href="mailto:mascher@ipk-gatersleben.de">mascher@ipk-gatersleben.de</a></p>
 </div>
 <link rel="stylesheet"  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css">
@@ -581,7 +581,7 @@ The Virtual Machine has already been set up with all necessary software installe
 You will be prompted to enter your user password.</p>
 <div class="listingblock">
 <div class="content">
-<pre class="pygments highlight"><code data-lang="sh"><span></span>sudo apt install samtools kallisto minimap2 python git r-base ncbi-blast+ libssl-dev curl libcurl4-openssl-dev pandoc emboss mafft snp-sites gmap</code></pre>
+<pre class="pygments highlight"><code data-lang="sh"><span></span>sudo apt install samtools cufflinks kallisto minimap2 python git r-base ncbi-blast+ libssl-dev curl libcurl4-openssl-dev pandoc emboss mafft snp-sites gmap</code></pre>
 </div>
 </div>
 <div class="olist loweralpha">
@@ -1103,7 +1103,7 @@ cp -t /media/Desktop/3drna sample_info.csv transcript_genes.csv kallisto.zip</co
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-11-10 11:25:01 +0100
+Last updated 2025-11-13 09:45:38 +0100
 </div>
 </div>
 </body>
