modified:   index.adoc 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 </li>
 <li><a href="#_transcriptome_atlases">5. Transcriptome atlases</a></li>
 <li><a href="#_barley_epigenome_browser">6. Barley epigenome browser</a></li>
-<li><a href="#_cereal_pan_genomes_at_grain_genes">7. Cereal pan-genomes at grain genes</a></li>
+<li><a href="#_cereal_pangenomes_at_grain_genes">7. Cereal pangenomes at grain genes</a></li>
 </ul>
 </div>
 </div>
@@ -985,7 +985,7 @@ grep -c <span class="tok-s1">&#39;^&gt;&#39;</span> iwgsc_refseqv1.0_HighConf_CD
 <p>Download the kallisto results. Delete the current output directories. Unzip the archive.</p>
 <div class="listingblock">
 <div class="content">
-<pre class="pygments highlight"><code data-lang="sh"><span></span>wget <span class="tok-s2">&quot;https://files.ipk-gatersleben.de/file/4pjBcfR5RLNKAgio/78rhUwXFGa1njjmp/kallisto.zip&quot;</span>
+<pre class="pygments highlight"><code data-lang="sh"><span></span>wget <span class="tok-s1">&#39;https://files.ipk-gatersleben.de/file/RBWEFkcdORboj1QM/zrsvWx9hzVxeEWN2/kallisto.zip&#39;</span>
 rm -rf *_kallisto
 unzip kallisto.zip</code></pre>
 </div>
@@ -1089,7 +1089,7 @@ cp -t /media/Desktop/3drna sample_info.csv transcript_genes.csv kallisto.zip</co
 </div>
 </div>
 <div class="sect1">
-<h2 id="_cereal_pan_genomes_at_grain_genes">7. Cereal pan-genomes at grain genes</h2>
+<h2 id="_cereal_pangenomes_at_grain_genes">7. Cereal pangenomes at grain genes</h2>
 <div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
@@ -1103,7 +1103,7 @@ cp -t /media/Desktop/3drna sample_info.csv transcript_genes.csv kallisto.zip</co
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-11-13 09:45:38 +0100
+Last updated 2025-11-13 09:49:55 +0100
 </div>
 </div>
 </body>
